--- a/mio/public/css/main.css
+++ b/mio/public/css/main.css
@@ -1844,7 +1844,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffff2f;
+  background: #9ae8c3;
 }
 .links-of-blogroll {
   font-size: 13px;
