--- a/game/themes/next/source/css/_custom/custom.styl
+++ b/game/themes/next/source/css/_custom/custom.styl
@@ -1,7 +1,7 @@
 // Custom styles.
 
 body{
-  background: #000 url(/game/images/background.jpg)  center center fixed no-repeat;
+  background: #000 url(/code/images/background.jpg) center center fixed no-repeat;
   -moz-background-size: cover;
   background-size: cover;
   font-size: 15px;
@@ -60,7 +60,7 @@ a {
 
 .site-meta {
     color: #fff0;
-	background: #fff0;
+    background: #fff0;
 }
 
 .menu-item-active a {
@@ -94,7 +94,7 @@ a:hover {
     border-color: #222;
     color: #fff;
     background: #2220;
-	border: 2px solid #5550;
+    border: 2px solid #5550;
 }
 
 .footer {
@@ -140,19 +140,19 @@ site-state-item-count {
 }
 
 .affix-top{
-	background: rgba(0,0,0,0);
+    background: rgba(0,0,0,0);
 }
 
 .affix{
-	background: rgba(0,0,0,0);
+    background: rgba(0,0,0,0);
 }
 
 .velocity-animating{
-	background: rgba(0,0,0,0);
+    background: rgba(0,0,0,0);
 }
 
 .sidebar-inner{
-	background: rgba(0,0,0,0);
+    background: rgba(0,0,0,0);
 }
 
 .sidebar {
@@ -188,16 +188,16 @@ site-state-item-count {
 }
 
 .fa-feed:before, .fa-rss:before {
-	color: #fff;
+    color: #fff;
 }
 
 .links-of-author-item a {
-	color: #fff;
+    color: #fff;
 }
 
 .links-of-author-item a:hover {
-	color: #fff;
-	background: #fff0;
+    color: #fff;
+    background: #fff0;
 }
 
 .posts-collapse .post-title a {
@@ -249,7 +249,7 @@ $body-bg-color                = #fff
 
 b, strong {
     font-weight: bold;
-    color: #ff1700;
+    color: #FFA500;
 }
 
 .posts-expand .post-title-link::before{
