--- a/mio/themes/next/source/css/_custom/custom.styl
+++ b/mio/themes/next/source/css/_custom/custom.styl
@@ -249,7 +249,7 @@ $body-bg-color                = #fff
 
 b, strong {
     font-weight: bold;
-    color: #ff1700;
+    color: #FFA500;
 }
 
 .posts-expand .post-title-link::before{
