--- a/mio/public/css/main.css
+++ b/mio/public/css/main.css
@@ -1844,7 +1844,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #8aff24;
+  background: #00e4b3;
 }
 .links-of-blogroll {
   font-size: 13px;
